@startuml
namespace login {
    class CaptchaMessage << (S,Aquamarine) >> {
        - state protoimpl.MessageState
        - sizeCache protoimpl.SizeCache
        - unknownFields protoimpl.UnknownFields

        + Mobile string

        + Reset() 
        + String() string
        + ProtoMessage() 
        + ProtoReflect() protoreflect.Message
        + Descriptor() ([]byte, []int)
        + GetMobile() string

    }
    class CaptchaResponse << (S,Aquamarine) >> {
        - state protoimpl.MessageState
        - sizeCache protoimpl.SizeCache
        - unknownFields protoimpl.UnknownFields

        + Code string

        + Reset() 
        + String() string
        + ProtoMessage() 
        + ProtoReflect() protoreflect.Message
        + Descriptor() ([]byte, []int)
        + GetCode() string

    }
    interface LoginServiceClient  {
        + GetCaptcha(ctx context.Context, in *CaptchaMessage, opts ...grpc.CallOption) (*CaptchaResponse, error)
        + Register(ctx context.Context, in *RegisterMessage, opts ...grpc.CallOption) (*RegisterResponse, error)

    }
    interface LoginServiceServer  {
        - mustEmbedUnimplementedLoginServiceServer() 

        + GetCaptcha( context.Context,  *CaptchaMessage) (*CaptchaResponse, error)
        + Register( context.Context,  *RegisterMessage) (*RegisterResponse, error)

    }
    class RegisterMessage << (S,Aquamarine) >> {
        - state protoimpl.MessageState
        - sizeCache protoimpl.SizeCache
        - unknownFields protoimpl.UnknownFields

        + Mobile string
        + Name string
        + Password string
        + Captcha string
        + Email string

        + Reset() 
        + String() string
        + ProtoMessage() 
        + ProtoReflect() protoreflect.Message
        + Descriptor() ([]byte, []int)
        + GetMobile() string
        + GetName() string
        + GetPassword() string
        + GetCaptcha() string
        + GetEmail() string

    }
    class RegisterResponse << (S,Aquamarine) >> {
        - state protoimpl.MessageState
        - sizeCache protoimpl.SizeCache
        - unknownFields protoimpl.UnknownFields

        + Reset() 
        + String() string
        + ProtoMessage() 
        + ProtoReflect() protoreflect.Message
        + Descriptor() ([]byte, []int)

    }
    class UnimplementedLoginServiceServer << (S,Aquamarine) >> {
        - mustEmbedUnimplementedLoginServiceServer() 

        + GetCaptcha( context.Context,  *CaptchaMessage) (*CaptchaResponse, error)
        + Register( context.Context,  *RegisterMessage) (*RegisterResponse, error)

    }
    interface UnsafeLoginServiceServer  {
        - mustEmbedUnimplementedLoginServiceServer() 

    }
    class loginServiceClient << (S,Aquamarine) >> {
        - cc grpc.ClientConnInterface

        + GetCaptcha(ctx context.Context, in *CaptchaMessage, opts ...grpc.CallOption) (*CaptchaResponse, error)
        + Register(ctx context.Context, in *RegisterMessage, opts ...grpc.CallOption) (*RegisterResponse, error)

    }
}

"login.LoginServiceServer" <|-- "login.UnimplementedLoginServiceServer"
"login.UnsafeLoginServiceServer" <|-- "login.UnimplementedLoginServiceServer"
"login.LoginServiceClient" <|-- "login.loginServiceClient"

@enduml
